--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,111 @@
+asn1crypto==0.24.0
+astroid==2.2.5
+attrs==19.1.0
+autopep8==1.4.4
+backcall==0.1.0
+beautifulsoup4==4.7.1
+bleach==3.1.0
+blinker==1.4
+bs4==0.0.1
+certifi==2019.6.16
+cffi==1.12.3
+chardet==3.0.4
+Click==7.0
+colorama==0.4.1
+configparser==4.0.2
+cryptography==2.7
+DateTime==4.3
+decorator==4.4.0
+defusedxml==0.6.0
+entrypoints==0.3
+firebase==3.0.1
 Flask==1.1.1
-Werkzeug==0.15.5
-WTForms==2.2.1
-Flask_WTF==0.14.2
+Flask-Mail==0.9.1
+Flask-SocketIO==4.2.1
+Flask-Uploads==0.2.1
+Flask-WTF==0.14.2
+gcloud==0.18.3
+googleapis-common-protos==1.6.0
+gTTS==2.0.3
+gTTS-token==1.1.3
+httplib2==0.13.1
+idna==2.8
+ipykernel==5.1.1
+ipython==7.6.1
+ipython-genutils==0.2.0
+ipywidgets==7.5.0
+isort==4.3.21
+itsdangerous==1.1.0
+jedi==0.14.1
+Jinja2==2.10.1
+jsonschema==3.0.1
+jupyter==1.0.0
+jupyter-client==5.3.1
+jupyter-console==6.0.0
+jupyter-core==4.5.0
+jwcrypto==0.6.0
+lazy-object-proxy==1.4.1
+lxml==4.4.1
+MarkupSafe==1.1.1
+mccabe==0.6.1
+mistune==0.8.4
+mysql-connector-python==8.0.17
+Naked==0.1.31
+nbconvert==5.5.0
+nbformat==4.4.0
+notebook==6.0.0
+oauth2client==4.1.3
+pandocfilters==1.4.2
+parso==0.5.1
 passlib==1.7.1
-datetime==4.3
-mysql_connector_python==8.0.17 
-protobuf==3.9.2 
+pickleshare==0.7.5
+playsound==1.2.2
+prometheus-client==0.7.1
+prompt-toolkit==2.0.9
+protobuf==3.10.0rc1
+pyasn1==0.4.7
+pyasn1-modules==0.2.6
+pycodestyle==2.5.0
+pycparser==2.19
+pygame==1.9.6
+Pygments==2.4.2
+pylint==2.3.1
+pypiwin32==223
+pyrsistent==0.15.3
+python-dateutil==2.8.0
+python-engineio==3.9.3
+python-firebase==1.2
+python-jwt==3.2.4
+python-socketio==4.3.1
+pyttsx==1.1
+pyttsx3==2.71
+pytube==9.5.1
+pytz==2019.2
+pywin32==224
+pywinpty==0.5.5
+PyYAML==5.1.2
+pyzmq==18.0.2
+qtconsole==4.5.1
+requests==2.22.0
+rsa==4.0
+selenium==3.141.0
+Send2Trash==1.5.0
+shellescape==3.4.1
 six==1.12.0
+soupsieve==1.9.2
+sseclient==0.0.24
+terminado==0.8.2
+testpath==0.4.2
+tornado==6.0.3
+traitlets==4.3.2
+typed-ast==1.4.0
+urllib3==1.25.3
+virtualenv==16.7.4
+virtualenvwrapper-win==1.2.5
+wcwidth==0.1.7
+webencodings==0.5.1
+Werkzeug==0.15.5
+widgetsnbextension==3.5.0
+wrapt==1.11.2
+WTForms==2.2.1
+zope.interface==4.6.0
